Revert "fixed nav bar covering content, replaced br tags with top and bottom margins so add and edit pages response to browser window"

--- a/public/content/app.css
+++ b/public/content/app.css
@@ -274,8 +274,3 @@
 .message{
   margin-top: 100px;
 }
-
-
-.main-content {margin-bottom: 65px;
-margin-top: 65px;}
-
